Routing database LCR section
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C20884

--- a/TOneV2/Code/TOneV2/TOne.BusinessEntity.Data/TOne.BusinessEntity.Data.csproj
+++ b/TOneV2/Code/TOneV2/TOne.BusinessEntity.Data/TOne.BusinessEntity.Data.csproj
@@ -50,6 +50,7 @@
     <Compile Include="ICarrierDataManager.cs" />
     <Compile Include="ICodeDataManager.cs" />
     <Compile Include="IDataManager.cs" />
+    <Compile Include="IRateDataManager.cs" />
     <Compile Include="IZoneDataManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
