--- a/TOneV2/Code/TOneV2/TOne.LCR.Data.SQL/TOne.LCR.Data.SQL.csproj
+++ b/TOneV2/Code/TOneV2/TOne.LCR.Data.SQL/TOne.LCR.Data.SQL.csproj
@@ -49,10 +49,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MasterDatabaseDataManager.cs" />
     <Compile Include="RoutingDataManager.cs" />
     <Compile Include="CodeMatchDataManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RateDataManager.cs" />
     <Compile Include="RoutingDatabaseDataManager.cs" />
     <Compile Include="ZoneInfoDataManager.cs" />
     <Compile Include="ZoneMatchDataManager.cs" />
