--- a/TOneV2/Code/TOneV2/TOne.Business/TOne.Business.csproj
+++ b/TOneV2/Code/TOneV2/TOne.Business/TOne.Business.csproj
@@ -109,6 +109,10 @@
     <Reference Include="Vanrise.Caching">
       <HintPath>..\..\..\..\Vanrise\Code\Output\Vanrise.Caching.dll</HintPath>
     </Reference>
+    <Reference Include="Vanrise.Common, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\Vanrise\Code\Output\Vanrise.Common.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BulkManager.cs" />
@@ -118,6 +122,7 @@
     <Compile Include="ProtPricingGenerator.cs" />
     <Compile Include="SecurityManager.cs" />
     <Compile Include="SharedQueueManager.cs" />
+    <Compile Include="ConfigParameterManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TABS\TABS.csproj">
