--- a/TOneV2/Code/TOneV2/TOne.BusinessEntity.BProcess.Activities/TOne.BusinessEntity.BProcess.Activities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.BusinessEntity.BProcess.Activities/TOne.BusinessEntity.BProcess.Activities.csproj
@@ -68,6 +68,10 @@
       <Project>{70ce755d-00ae-4e12-8f07-e4df91346293}</Project>
       <Name>TOne.BusinessEntity.Entities</Name>
     </ProjectReference>
+    <ProjectReference Include="..\TOne.Business\TOne.Business.csproj">
+      <Project>{cab55227-6fda-4012-8a59-168ad30f96d2}</Project>
+      <Name>TOne.Business</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
