--- a/TOneV2/Code/TOneV2/TOne.BusinessEntity.Business/TOne.BusinessEntity.Business.csproj
+++ b/TOneV2/Code/TOneV2/TOne.BusinessEntity.Business/TOne.BusinessEntity.Business.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="CodeManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RateManager.cs" />
     <Compile Include="ZoneManager.cs" />
   </ItemGroup>
   <ItemGroup>
