--- a/TOneV2/Code/TOneV2/TOne.BusinessEntity.Data.SQL/TOne.BusinessEntity.Data.SQL.csproj
+++ b/TOneV2/Code/TOneV2/TOne.BusinessEntity.Data.SQL/TOne.BusinessEntity.Data.SQL.csproj
@@ -52,6 +52,7 @@
     <Compile Include="CarrierDataManager.cs" />
     <Compile Include="CodeDataManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RateDataManager.cs" />
     <Compile Include="ZoneDataManager.cs" />
   </ItemGroup>
   <ItemGroup>
