--- a/TOneV2/Code/TOneV2/TOne.BusinessEntity.Entities/TOne.BusinessEntity.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.BusinessEntity.Entities/TOne.BusinessEntity.Entities.csproj
@@ -46,7 +46,10 @@
     <Compile Include="CarrierAccountInfo.cs" />
     <Compile Include="Code.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Rate.cs" />
     <Compile Include="ZoneInfo.cs" />
+    <Compile Include="ZoneRate.cs" />
+    <Compile Include="ZoneRateBatch.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
