--- a/TOneV2/Code/TOneV2/TestRuntime/app.config
+++ b/TOneV2/Code/TOneV2/TestRuntime/app.config
@@ -22,13 +22,14 @@
     <!--<add name="MainDBConnString" connectionString="Server=192.168.18.6;Database=TOneDemoNew;User ID=sa;Password=password"/>-->
     <add name="MainDBConnString" connectionString="Server=192.168.110.180\redundant;Database=ToneSpactronNew;User ID=sa;Password=development@cce$$"/>
     <!--<add name="MainDBConnString" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=NettalkFidaa;Data Source=."/>-->
-    <!--<add name="MainDBConnString" connectionString="Server=192.168.110.185;Database=Mmokdad;User ID=Development;Password=dev!123"/>-->
+    <!--<add name="MainDBConnString" connectionString="Server=192.168.110.185;Database=TOneDevTest01;User ID=Development;Password=dev!123"/>-->
     <!--<add name="MainDBConnString" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=NettalkFidaa;Data Source=."/>-->
     <add name="CDRTargetDBConnString" connectionString="Server=192.168.110.185;Database=Mmokdad;User ID=Development;Password=dev!123"/>
     <add name="TransactionDBConnString" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=TOneTransactionDB;Data Source=."/>
      <add name="QueueItemDBConnString" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=TOneQueueDB;Data Source=."/>
     <add name="LogDBConnString" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=TOneWFTracking;Data Source=."/>
-    <add name="RoutingDBConnStringTemplateKey" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=TOneRouting_{0};Data Source=."/>
+    <!--<add name="RoutingDBConnStringTemplateKey" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=TOneRouting_{0};Data Source=."/>-->
+    <add name="RoutingDBConnStringTemplateKey" connectionString="Data Source=192.168.110.185;Initial Catalog=TOneSpactronNew_Routing_{0};User ID=Development;Password=dev!123"/>
     <!--<add name="WFPersistence" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=TOneWFPersistence;Data Source=."/>-->
   </connectionStrings>
 
@@ -164,7 +165,8 @@
     <add key="BusinessProcessDBConnStringKey" value="TransactionDBConnString"/>
     <add key="BusinessProcessTrackingDBConnStringKey" value="LogDBConnString"/>
     <add key="LogLevel" value="Information"/>
-    <add key="AddBusinessProcessConsoleTracking" value="false"/>
+    <add key="AddBusinessProcessConsoleTracking" value="true"/>
+    <add key="DropOldRoutingDatabasesInterval" value="00:01:00"/>
   </appSettings>
   <system.codedom>
     <compilers>
