Add commission manager
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C20947

--- a/TOneV2/Code/TOneV2/TOne.BusinessEntity.Data/TOne.BusinessEntity.Data.csproj
+++ b/TOneV2/Code/TOneV2/TOne.BusinessEntity.Data/TOne.BusinessEntity.Data.csproj
@@ -49,6 +49,7 @@
     <Compile Include="BEDataManagerFactory.cs" />
     <Compile Include="ICarrierDataManager.cs" />
     <Compile Include="ICodeDataManager.cs" />
+    <Compile Include="ICommissionDataManager.cs" />
     <Compile Include="IDataManager.cs" />
     <Compile Include="IRateDataManager.cs" />
     <Compile Include="IZoneDataManager.cs" />
