--- a/TOneV2/Code/TOneV2/TOne.BusinessEntity.Business/TOne.BusinessEntity.Business.csproj
+++ b/TOneV2/Code/TOneV2/TOne.BusinessEntity.Business/TOne.BusinessEntity.Business.csproj
@@ -41,11 +41,15 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="Vanrise.Caching">
+      <HintPath>..\..\..\..\Vanrise\Code\Output\Vanrise.Caching.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CarrierManager.cs" />
     <Compile Include="CodeManager.cs" />
     <Compile Include="CommissionManager.cs" />
+    <Compile Include="PricingGenerator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RateManager.cs" />
     <Compile Include="ZoneManager.cs" />
