git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C20982

--- a/FZero/Vanrise.Fzero.MobileCDRAnalysis/Vanrise.Fzero.MobileCDRAnalysis.csproj
+++ b/FZero/Vanrise.Fzero.MobileCDRAnalysis/Vanrise.Fzero.MobileCDRAnalysis.csproj
@@ -53,6 +53,9 @@
     <Compile Include="CDR.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
+    <Compile Include="CellProfile.cs">
+      <DependentUpon>Model.tt</DependentUpon>
+    </Compile>
     <Compile Include="Classes\EmailReceiverType.cs" />
     <Compile Include="Classes\CDR.cs" />
     <Compile Include="Classes\Import.cs" />
