Add Pricing Generator
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C21016

--- a/TOneV2/Code/TOneV2/TOne.BusinessEntity.Business/TOne.BusinessEntity.Business.csproj
+++ b/TOneV2/Code/TOneV2/TOne.BusinessEntity.Business/TOne.BusinessEntity.Business.csproj
@@ -50,6 +50,7 @@
     <Compile Include="CodeManager.cs" />
     <Compile Include="CommissionManager.cs" />
     <Compile Include="PricingGenerator.cs" />
+    <Compile Include="PricingGeneratorEntites.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RateManager.cs" />
     <Compile Include="ZoneManager.cs" />
