--- a/TOneV2/Code/TOneV2/TOne.BusinessEntity.Entities/TOne.BusinessEntity.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.BusinessEntity.Entities/TOne.BusinessEntity.Entities.csproj
@@ -53,6 +53,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Rate.cs" />
     <Compile Include="SuppliersCodes.cs" />
+    <Compile Include="Tariff.cs" />
+    <Compile Include="ToDConsideration.cs" />
     <Compile Include="ZoneInfo.cs" />
     <Compile Include="ZoneRate.cs" />
     <Compile Include="ZoneRateBatch.cs" />
