--- a/TOneV2/Code/TOneV2/TOne.BusinessEntity.Data/TOne.BusinessEntity.Data.csproj
+++ b/TOneV2/Code/TOneV2/TOne.BusinessEntity.Data/TOne.BusinessEntity.Data.csproj
@@ -52,6 +52,7 @@
     <Compile Include="ICommissionDataManager.cs" />
     <Compile Include="IDataManager.cs" />
     <Compile Include="IRateDataManager.cs" />
+    <Compile Include="ITariffDataManager.cs" />
     <Compile Include="IZoneDataManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
