--- a/TOneV2/Code/TOneV2/TOne.CDR.Business/TOne.CDR.Business.csproj
+++ b/TOneV2/Code/TOneV2/TOne.CDR.Business/TOne.CDR.Business.csproj
@@ -62,12 +62,21 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CDRQueueFactory.cs" />
+    <Compile Include="PricingGenerator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TABS\TABS.csproj">
       <Project>{53916714-c501-4613-907f-d5f33b78c3f0}</Project>
       <Name>TABS</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TOne.BusinessEntity.Entities\TOne.BusinessEntity.Entities.csproj">
+      <Project>{70ce755d-00ae-4e12-8f07-e4df91346293}</Project>
+      <Name>TOne.BusinessEntity.Entities</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TOne.Caching\TOne.Caching.csproj">
+      <Project>{1950b29a-5c7b-47a3-8113-fc9211d27cfd}</Project>
+      <Name>TOne.Caching</Name>
     </ProjectReference>
     <ProjectReference Include="..\TOne.CDR.Entities\TOne.CDR.Entities.csproj">
       <Project>{33bba8af-e925-4354-b05c-39e623a21da9}</Project>
