--- a/CLITester/CallGeneratorLibrary/app.config
+++ b/CLITester/CallGeneratorLibrary/app.config
@@ -2,14 +2,30 @@
 <configuration>
   <configSections>
   </configSections>
+  <system.web>
+    <httpHandlers>
+      <add path="Reserved.ReportViewerWebControl.axd" verb="*" type="Microsoft.Reporting.WebForms.HttpHandler, Microsoft.ReportViewer.WebForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91"
+        validate="false" />
+    </httpHandlers>
+    <compilation debug="true" targetFramework="4.0">
+      <assemblies>
+        <add assembly="Microsoft.ReportViewer.WebForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845DCD8080CC91" />
+        <add assembly="Microsoft.ReportViewer.Common, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845DCD8080CC91" />
+        <add assembly="Microsoft.Build.Framework, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A" />
+      </assemblies>
+      <buildProviders>
+        <add extension=".rdlc" type="Microsoft.Reporting.RdlBuildProvider, Microsoft.ReportViewer.WebForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" />
+      </buildProviders>
+    </compilation>
+  </system.web>
   <appSettings>
-    <add key="SipAccId" value="2" />
+    <add key="SipAccId" value="1" />
     <add key="SendingEmail" value="vanrise.clitester@gmail.com" />
     <add key="SmtpServer" value="smtp.gmail.com" />
   </appSettings>
     <connectionStrings>
         <add name="CallGeneratorLibrary.Properties.Settings.FraudTest2ConnectionString"
-            connectionString="Data Source=LENOVO\SQL2008R2;Initial Catalog=FraudTest2;Persist Security Info=True;User ID=sa;Password=lenovo"
+            connectionString="Data Source=.;User ID=sa;Password=vanrise@cce$$;Initial Catalog=FraudTest2;"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
