--- a/CLITester/AndroidApplicationService/AndroidApplicationService.csproj
+++ b/CLITester/AndroidApplicationService/AndroidApplicationService.csproj
@@ -42,6 +42,7 @@
     <StartupObject>AndroidApplicationService.Program</StartupObject>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.ReportViewer.WebForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Configuration.Install" />
