--- a/CLITester/CLITesterSite/Web.config
+++ b/CLITester/CLITesterSite/Web.config
@@ -1,20 +1,31 @@
 ﻿<?xml version="1.0"?>
-
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
-
 <configuration>
-
-    <system.web>
-      <compilation debug="true" targetFramework="4.5" />
-      <httpRuntime targetFramework="4.5" />
-      <pages clientIDMode="Static"  />
-    </system.web>
+  <system.web>
+    <httpHandlers>
+      <add path="Reserved.ReportViewerWebControl.axd" verb="*" type="Microsoft.Reporting.WebForms.HttpHandler, Microsoft.ReportViewer.WebForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91"
+        validate="false" />
+    </httpHandlers>
+    <compilation debug="true" targetFramework="4.5">
+      <assemblies>
+        <add assembly="Microsoft.ReportViewer.WebForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845DCD8080CC91" />
+        <add assembly="Microsoft.ReportViewer.Common, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845DCD8080CC91" />
+        <add assembly="Microsoft.Build.Framework, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A" />
+      </assemblies>
+      <buildProviders>
+        <add extension=".rdlc" type="Microsoft.Reporting.RdlBuildProvider, Microsoft.ReportViewer.WebForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" />
+      </buildProviders>
+    </compilation>
+    <httpRuntime targetFramework="4.5"/>
+    <pages clientIDMode="Static"/>
+  </system.web>
   <appSettings>
-    <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
-    <add key="ExpiryTimeRequestCall" value="40" />    <!-- in seconds -->
+    <add key="ValidationSettings:UnobtrusiveValidationMode" value="None"/>
+    <add key="ExpiryTimeRequestCall" value="70"/>
+    <!-- in seconds -->
     <add key="SmtpServer" value="mail.ids.com.lb"/>
     <add key="ConfirmPage" value="http://localhost:2723/MoaWeb/ConfirmRegistration.aspx"/>
     <add key="ResetPasswordLink" value="http://localhost:2723/MoaWeb/ResetPassword.aspx"/>
@@ -22,5 +33,4 @@
     <add key="ProjectsResources" value="./Resources/"/>
     <add key="ExtensionsResources" value="../Resources/"/>
   </appSettings>
-  
 </configuration>
