--- a/CLITester/CallGeneratorLibrary/CallGeneratorLibrary.csproj
+++ b/CLITester/CallGeneratorLibrary/CallGeneratorLibrary.csproj
@@ -35,12 +35,15 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.ReportViewer.Common, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
+    <Reference Include="Microsoft.ReportViewer.WebForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.Linq" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Web" />
+    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -57,6 +60,15 @@
       <DependentUpon>CallGeneratorModel.dbml</DependentUpon>
     </Compile>
     <Compile Include="Class1.cs" />
+    <Compile Include="CliTesterDataSet.cs">
+      <DependentUpon>CliTesterDataSet.xsd</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="CliTesterDataSet.Designer.cs">
+      <DependentUpon>CliTesterDataSet.xsd</DependentUpon>
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+    </Compile>
     <Compile Include="Helpers\Extensions.cs" />
     <Compile Include="Helpers\ObjectCopier.cs" />
     <Compile Include="Interfaces\ILookupRepository.cs" />
@@ -116,6 +128,17 @@
       <LastGenOutput>CallGeneratorModel.designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </None>
+    <None Include="CliTesterDataSet.xsc">
+      <DependentUpon>CliTesterDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="CliTesterDataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>CliTesterDataSet.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="CliTesterDataSet.xss">
+      <DependentUpon>CliTesterDataSet.xsd</DependentUpon>
+    </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -142,6 +165,9 @@
       <Isolated>False</Isolated>
       <EmbedInteropTypes>True</EmbedInteropTypes>
     </COMReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Reports\TestOperatorReport.rdlc" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
