--- a/TOneV2/Code/TOneV2/TOne.CDR.Business/TOne.CDR.Business.csproj
+++ b/TOneV2/Code/TOneV2/TOne.CDR.Business/TOne.CDR.Business.csproj
@@ -73,6 +73,10 @@
       <Project>{53916714-c501-4613-907f-d5f33b78c3f0}</Project>
       <Name>TABS</Name>
     </ProjectReference>
+    <ProjectReference Include="..\TOne.BusinessEntity.Business\TOne.BusinessEntity.Business.csproj">
+      <Project>{bdc9694f-88b7-492d-9865-304e774a5776}</Project>
+      <Name>TOne.BusinessEntity.Business</Name>
+    </ProjectReference>
     <ProjectReference Include="..\TOne.BusinessEntity.Entities\TOne.BusinessEntity.Entities.csproj">
       <Project>{70ce755d-00ae-4e12-8f07-e4df91346293}</Project>
       <Name>TOne.BusinessEntity.Entities</Name>
