--- a/TOneV2/Code/TOneV2/TOne.BusinessEntity.Data.SQL/TOne.BusinessEntity.Data.SQL.csproj
+++ b/TOneV2/Code/TOneV2/TOne.BusinessEntity.Data.SQL/TOne.BusinessEntity.Data.SQL.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RateDataManager.cs" />
     <Compile Include="TariffDataManager.cs" />
+    <Compile Include="ToDConsiderationDataManager.cs" />
     <Compile Include="ZoneDataManager.cs" />
   </ItemGroup>
   <ItemGroup>
