--- a/TOneV2/Code/TOneV2/TOne.LCR.Data/TOne.LCR.Data.csproj
+++ b/TOneV2/Code/TOneV2/TOne.LCR.Data/TOne.LCR.Data.csproj
@@ -46,6 +46,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ICodePrefixGroupDataManager.cs" />
     <Compile Include="IRoutingDatabaseDataManager.cs" />
     <Compile Include="IRoutingDataManager.cs" />
     <Compile Include="IZoneInfoDataManager.cs" />
