--- a/TOneV2/Code/TOneV2/TestRuntime/app.config
+++ b/TOneV2/Code/TOneV2/TestRuntime/app.config
@@ -26,10 +26,10 @@
     <!--<add name="MainDBConnString" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=NettalkFidaa;Data Source=."/>-->
     <add name="CDRTargetDBConnString" connectionString="Server=192.168.110.185;Database=Mmokdad;User ID=Development;Password=dev!123"/>
     <add name="TransactionDBConnString" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=TOneTransactionDB;Data Source=."/>
-     <add name="QueueItemDBConnString" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=TOneQueueDB;Data Source=."/>
+    <add name="QueueItemDBConnString" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=TOneQueueDB;Data Source=."/>
     <add name="LogDBConnString" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=TOneWFTracking;Data Source=."/>
     <!--<add name="RoutingDBConnStringTemplateKey" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=TOneRouting_{0};Data Source=."/>-->
-    <add name="RoutingDBConnStringTemplateKey" connectionString="Data Source=192.168.110.185;Initial Catalog=TOneDevTest01_Routing_{0};User ID=Development;Password=dev!123"/>
+    <add name="RoutingDBConnStringTemplateKey" connectionString="Data Source=.;Initial Catalog=TOneDevTest01_Routing_{0};Integrated Security=SSPI;Persist Security Info=False;"/>
     <!--<add name="WFPersistence" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=TOneWFPersistence;Data Source=."/>-->
   </connectionStrings>
 
