--- a/TOneV2/Code/TOneV2/TOne.CDR.Business/TOne.CDR.Business.csproj
+++ b/TOneV2/Code/TOneV2/TOne.CDR.Business/TOne.CDR.Business.csproj
@@ -66,6 +66,7 @@
   <ItemGroup>
     <Compile Include="CDRQueueFactory.cs" />
     <Compile Include="PricingGenerator.cs" />
+    <Compile Include="PricingGeneratorEntities.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
