--- a/TOneV2/Code/TOneV2/TOne.CDR.Entities/TOne.CDR.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.CDR.Entities/TOne.CDR.Entities.csproj
@@ -74,6 +74,10 @@
       <Project>{53916714-c501-4613-907f-d5f33b78c3f0}</Project>
       <Name>TABS</Name>
     </ProjectReference>
+    <ProjectReference Include="..\TOne.BusinessEntity.Entities\TOne.BusinessEntity.Entities.csproj">
+      <Project>{70ce755d-00ae-4e12-8f07-e4df91346293}</Project>
+      <Name>TOne.BusinessEntity.Entities</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
